tests/expectations/compiler/dynamic_dispatch/dynamic_call_unsuffixed_arg_fail.out
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:6:55
     |
   6 |         return _dynamic_call::[u64]('a', 'aleo', 'b', 1);
     |                                                       ^
     |
     = Consider using explicit type annotations.
